# hprose-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
hprose/: Cargo.toml
hprose/src/: lib.rs
hprose/src/io/: bool_decoder.rs  byte_reader.rs  byte_writer.rs  decoder.rs  encoder.rs  f32_decoder.rs  f64_decoder.rs  formatter.rs  i64_decoder.rs  map_decoder.rs  mod.rs  reader.rs  reader_refer.rs  string_decoder.rs  tags.rs  u64_decoder.rs  util.rs  writer.rs  writer_refer.rs
hprose/src/io/decoders/: bool_decoder.rs  bytes_decoder.rs  char_decoder.rs  f32_decoder.rs  f64_decoder.rs  i64_decoder.rs  map_decoder.rs  mod.rs  seq_decoder.rs  string_decoder.rs  time_decoder.rs  u64_decoder.rs
hprose/src/rpc/: base_client.rs  client.rs  filter.rs  http_client.rs  mod.rs
src/: lib.rs  main.rs
src/io/: bool_decoder.rs  byte_reader.rs  byte_writer.rs  decoder.rs  encoder.rs  f32_decoder.rs  f64_decoder.rs  formatter.rs  i64_decoder.rs  map_decoder.rs  mod.rs  reader.rs  string_decoder.rs  tags.rs  u64_decoder.rs  util.rs  writer.rs  writer_refer.rs
src/io/decoders/: f32_decoder.rs  f64_decoder.rs  i64_decoder.rs  map_decoder.rs  mod.rs  u64_decoder.rs
src/rpc/: base_client.rs  client.rs  http_client.rs  mod.rs  result_mode.rs
